tests/machine/x/ocaml/values_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/values_builtin.ml", line 39, characters 25-31:
39 |   print_endline (__show (values m));
                              ^^^^^^
Error: Unbound value values


Context (around line 39):
  37 | 
  38 | let () =
  39 |   print_endline (__show (values m));
  40 | 
